fixed 多线程调度器,